[TASK] Add basic file resolution

--- a/Resources/Private/Partials/Types/Text.html
+++ b/Resources/Private/Partials/Types/Text.html
@@ -3,8 +3,6 @@
     <f:then>
         <f:format.crop maxCharacters="{field.configuration.crop}">{field.value}</f:format.crop>
     </f:then>
-    <f:else>
-        {field.value}
-    </f:else>
+    <f:else>{field.value}</f:else>
 </f:if>
 </html>
