--- a/Resources/Private/Templates/List.html
+++ b/Resources/Private/Templates/List.html
@@ -4,18 +4,21 @@
         <f:if condition="{it.isFirst}">
             <tr>
                 <f:for each="{row}" as="field">
-                    <th>{field.configuration.label}</th>
+                    <f:if condition="{field.config.visible}">
+                        <th>{field.config.label}</th>
+                    </f:if>
                 </f:for>
             </tr>
         </f:if>
     </f:for>
-    <f:for each="{rows}" as="row" iteration="it">
+    <f:for each="{rows}" as="row">
         <tr>
             <f:for each="{row}" as="field">
-                <f:debug>{field}</f:debug>
-                <td>
-                    <f:render partial="Types/{field.type}" arguments="{field: field}"/>
-                </td>
+                <f:if condition="{field.config.visible}">
+                    <td>
+                        <f:render partial="Types/{field.config.type}" arguments="{field: field, configuration: configuration, row: row}"/>
+                    </td>
+                </f:if>
             </f:for>
         </tr>
     </f:for>
