--- a/Resources/Private/Partials/Types/Relation.html
+++ b/Resources/Private/Partials/Types/Relation.html
@@ -1,8 +1,13 @@
 <html xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers" xmlns:tcafe="http://typo3.org/ns/Vd/Tcafe/ViewHelpers" data-namespace-typo3-fluid="true">
+
 <tcafe:resolveRelation uidLocal="{row.uid.value}" table="{configuration.table}" field="{field}">
     <f:for each="{records}" as="record">
         <f:for each="{record}" as="field">
-            <f:render partial="Types/{field.config.type}" arguments="{field: field, configuration: configuration, row: record, settings: settings}"/>
+            <f:if condition="{field.config.type}" >
+                <f:then>
+                    <f:render partial="Types/{field.config.type}" arguments="{field: field, configuration: configuration, row: record, settings: settings}"/>
+                </f:then>
+            </f:if>
         </f:for><br>
     </f:for>
 </tcafe:resolveRelation>
