[TASK] Add link to detail view and add the possibility to select which field should be linked

--- a/Resources/Private/Partials/Types/File.html
+++ b/Resources/Private/Partials/Types/File.html
@@ -1,7 +1,14 @@
 <html xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers" xmlns:tcafe="http://typo3.org/ns/Vd/Tcafe/ViewHelpers" data-namespace-typo3-fluid="true">
 <tcafe:fal data="{tcafe:getDataFromRow(row: row)}" field="{field.name}" table="{configuration.table}" as="files">
     <f:for each="{files}" as="file">
-        <f:image treatIdAsReference="1" src="{file.uid}"/>
+        <f:if condition="({action} == 'list' && {field.config.linkedField})">
+            <f:then>
+                <f:link.action action="show" pageUid="{configuration.detail.pid}"><f:image treatIdAsReference="1" src="{file.uid}"/></f:link.action>
+            </f:then>
+            <f:else>
+                <f:image treatIdAsReference="1" src="{file.uid}"/>
+            </f:else>
+        </f:if>
     </f:for>
 </tcafe:fal>
 </html>
