--- a/Resources/Private/Partials/Types/File.html
+++ b/Resources/Private/Partials/Types/File.html
@@ -3,7 +3,7 @@
     <f:for each="{files}" as="file">
         <f:if condition="({action} == 'list' && {field.config.linkedField})">
             <f:then>
-                <f:link.action action="show" pageUid="{configuration.detail.pid}"><f:image treatIdAsReference="1" src="{file.uid}"/></f:link.action>
+                <f:link.action action="detail" pageUid="{configuration.detail.pid}"><f:image treatIdAsReference="1" src="{file.uid}"/></f:link.action>
             </f:then>
             <f:else>
                 <f:image treatIdAsReference="1" src="{file.uid}"/>
