[TASK] Rename VH and add partial root path for custom view

--- a/Resources/Private/Partials/Types/Relation.html
+++ b/Resources/Private/Partials/Types/Relation.html
@@ -1,6 +1,5 @@
 <html xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers" xmlns:tcafe="http://typo3.org/ns/Vd/Tcafe/ViewHelpers" data-namespace-typo3-fluid="true">
-
-<tcafe:resolveRelation uidLocal="{row.uid.value}" table="{configuration.table}" field="{field}">
+<tcafe:relation uidLocal="{row.uid.value}" table="{configuration.table}" foreignFieldName="{field.name}" foreignFieldValue="{field.value}" foreignTableSelectFields="{field.config.fields}">
     <f:for each="{records}" as="record">
         <f:for each="{record}" as="field">
             <f:if condition="{field.config.type}" >
@@ -10,5 +9,5 @@
             </f:if>
         </f:for><br>
     </f:for>
-</tcafe:resolveRelation>
+</tcafe:relation>
 </html>
