--- a/Resources/Private/Partials/Filter/Input.html
+++ b/Resources/Private/Partials/Filter/Input.html
@@ -1,3 +1,3 @@
 <html xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers" data-namespace-typo3-fluid="true">
-@todo pagination
+$label :<input type="text" name="tx_tcafe_$" onchange="">
 </html>
