--- a/Resources/Private/Templates/List.html
+++ b/Resources/Private/Templates/List.html
@@ -1,34 +1,6 @@
 <html xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers" data-namespace-typo3-fluid="true">
-<!-- configuration rows -->
-<f:debug title="LIST">{configuration.list}</f:debug>
-<f:render partial="Filters/Filters" arguments="{filter: configuration.list.filter, rows: rows settings: settings}"/>
-
 <table class="table">
-    <thead>
-    <f:for each="{rows}" as="row" iteration="it">
-        <f:if condition="{it.isFirst}">
-            <tr>
-                <f:for each="{row}" as="field">
-                    <f:if condition="{field.config.visible}">
-                        <th scope="col">{field.config.label}</th>
-                    </f:if>
-                </f:for>
-            </tr>
-        </f:if>
-    </f:for>
-    </thead>
-    <tbody>
-    <f:for each="{rows}" as="row">
-        <tr>
-            <f:for each="{row}" as="field" iteration="it">
-                <f:if condition="{field.config.visible}">
-                    <td>
-                        <f:render partial="Types/{field.config.type}" arguments="{field: field, configuration: configuration, row: row, settings: settings, action:'list'}"/>
-                    </td>
-                </f:if>
-            </f:for>
-        </tr>
-    </f:for>
-    </tbody>
+    <f:render partial="List/TableHead" arguments="{rows: rows}" />
+    <f:render partial="List/TableBody" arguments="{_all}" />
 </table>
 </html>
