--- a/Resources/Private/Templates/Filter.html
+++ b/Resources/Private/Templates/Filter.html
@@ -1,9 +1,24 @@
 <html xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers" data-namespace-typo3-fluid="true">
-<f:for each="{filters}" as="filter">
-    <f:render partial="Filter/{filter.type}" arguments="{filter: filter}" />
-</f:for>
-<table class="table">
-    <f:render partial="List/TableHead" arguments="{rows: rows}" />
-    <f:render partial="List/TableBody" arguments="{_all}" />
-</table>
+<f:if condition="{filters}">
+    <f:form class="form" action="filter">
+        <f:for each="{filters}" as="filter" iteration="it">
+            <f:variable name="filterValue">{filterValues.{it.index}}</f:variable>
+            <f:render partial="Filter/{filter.type}" arguments="{filter: filter, id: it.index, value: filterValue}" />
+        </f:for>
+        <f:form.submit value="Submit" class="btn btn-primary" />
+    </f:form>
+</f:if>
+<f:if condition="{rows}">
+	<f:then>
+        <table class="table">
+            <f:render partial="List/TableHead" arguments="{rows: rows}" />
+            <f:render partial="List/TableBody" arguments="{_all}" />
+        </table>
+    </f:then>
+    <f:else>
+        <div class="alert alert-warning" role="alert">
+            No rows found...
+        </div>
+    </f:else>
+</f:if>
 </html>
