--- a/Resources/Private/Templates/List.html
+++ b/Resources/Private/Templates/List.html
@@ -1,6 +1,3 @@
 <html xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers" data-namespace-typo3-fluid="true">
-<table class="table">
-    <f:render partial="List/TableHead" arguments="{rows: rows}" />
-    <f:render partial="List/TableBody" arguments="{_all}" />
-</table>
+<f:render partial="List/Table" arguments="{_all}" />
 </html>
