--- a/Resources/Private/Partials/Filter/Select.html
+++ b/Resources/Private/Partials/Filter/Select.html
@@ -6,6 +6,6 @@
             <f:else>{filter.field}</f:else>
         </f:if>
     </label>
-    <f:form.textfield class="form-control" name="filterValues[{id}]" id="filter-{id}" placeholder="{filter.placeholder}" value="{value}" />
+    <f:form.select options="{filter.items}" class="form-control" name="filterValues[{id}]" id="filter-{id}" value="{value}" />
 </div>
 </html>
