--- a/Resources/Private/Templates/Filter.html
+++ b/Resources/Private/Templates/Filter.html
@@ -3,10 +3,12 @@
     <f:form class="form" action="filter">
         <f:for each="{filters}" as="filter" iteration="it">
             <f:variable name="filterValue">{filterValues.{it.index}}</f:variable>
+
             <f:render partial="Filter/{filter.type}" arguments="{filter: filter, id: it.index, value: filterValue}" />
         </f:for>
         <f:form.submit value="Submit" class="btn btn-primary" />
     </f:form>
 </f:if>
 <f:render partial="List/Table" arguments="{_all}" />
+<f:render partial="Pagination/Pagination" arguments="{currentPage: currentPage, pagination: configuration.list.pagination}" />
 </html>
