--- a/Resources/Private/Partials/Pagination/Pagination.html
+++ b/Resources/Private/Partials/Pagination/Pagination.html
@@ -1,28 +1,26 @@
 <html xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers" data-namespace-typo3-fluid="true">
-<f:if condition="{pagination}">
+<f:if condition="{f:count(subject: pagination.pages)} > 1">
     <nav>
         <ul class="pagination justify-content-center">
             <li class="page-item{f:if(condition: '{currentPage} == 0', then: ' disabled')}">
-                <f:variable name="prevPage" value="{currentPage - 1}"/>
-                <f:link.action class="page-link" action="filter" arguments="{currentPage: prevPage}">&laquo;</f:link.action>
+                <f:link.action class="page-link" action="filter" arguments="{currentPage: '{currentPage - 1}'}">&laquo;</f:link.action>
             </li>
             <f:for each="{pagination.pages}" as="page">
                <f:if condition="{page.active}">
                	    <f:then>
-                        <li class="page-item">
-                            <a class="page-link active" href="{page.link}">{page.index} <span class="sr-only">(current)</span></a>
+                        <li class="page-item active">
+                            <a class="page-link" href="{page.link}">{page.label} <span class="sr-only">(current)</span></a>
                         </li>
                     </f:then>
                	    <f:else>
                         <li class="page-item">
-                            <a class="page-link" href="{page.link}">{page.index}</a>
+                            <a class="page-link" href="{page.link}">{page.label}</a>
                         </li>
                     </f:else>
                </f:if>
             </f:for>
             <li class="page-item{f:if(condition: '{currentPage + 1} == {pagination.numberOfPages}', then: ' disabled')}">
-                <f:variable name="nextPage" value="{currentPage + 1}"/>
-                <f:link.action class="page-link" action="filter" arguments="{currentPage: nextPage}">&raquo;</f:link.action>
+                <f:link.action class="page-link" action="filter" arguments="{currentPage: '{currentPage + 1}'}">&raquo;</f:link.action>
             </li>
         </ul>
     </nav>
