--- a/Resources/Private/Partials/Pagination/Pagination.html
+++ b/Resources/Private/Partials/Pagination/Pagination.html
@@ -4,24 +4,24 @@
     <nav>
         <ul class="pagination justify-content-center">
             <li class="page-item{f:if(condition: '{currentPage} == 0', then: ' disabled')}">
-                <f:link.action class="page-link" action="{action}" arguments="{currentPage: '{currentPage - 1}'}">&laquo;</f:link.action>
+                <f:link.action class="page-link" action="filter" arguments="{currentPage: '{currentPage - 1}', filterValues: filterValues}">&laquo;</f:link.action>
             </li>
             <f:for each="{pagination.pages}" as="page">
                <f:if condition="{page.active}">
                	    <f:then>
                         <li class="page-item active">
-                            <f:link.action class="page-link" action="{action}" arguments="{currentPage: page.index}">{page.label} <span class="sr-only">(current)</span></f:link.action>
+                            <f:link.action class="page-link" action="{action}" arguments="{currentPage: page.index, filterValues: filterValues}">{page.label} <span class="sr-only">(current)</span></f:link.action>
                         </li>
                     </f:then>
                	    <f:else>
                         <li class="page-item">
-                            <f:link.action class="page-link" action="{action}" arguments="{currentPage: page.index}">{page.label}</f:link.action>
+                            <f:link.action class="page-link" action="{action}" arguments="{currentPage: page.index, filterValues: filterValues}">{page.label}</f:link.action>
                         </li>
                     </f:else>
                </f:if>
             </f:for>
             <li class="page-item{f:if(condition: '{currentPage + 1} == {pagination.numberOfPages}', then: ' disabled')}">
-                <f:link.action class="page-link" action="{action}" arguments="{currentPage: '{currentPage + 1}'}">&raquo;</f:link.action>
+                <f:link.action class="page-link" action="filter" arguments="{currentPage: '{currentPage + 1}', filterValues: filterValues}">&raquo;</f:link.action>
             </li>
         </ul>
     </nav>
