--- a/Resources/Private/Partials/Types/RichText.html
+++ b/Resources/Private/Partials/Types/RichText.html
@@ -1,8 +1,8 @@
 <html xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers" data-namespace-typo3-fluid="true">
-<f:if condition="{field.configuration.crop}">
+<f:if condition="{field.config.crop}">
     <f:then>
-        <f:format.crop maxCharacters="{field.configuration.crop}">{field.value}</f:format.crop>
+        <f:format.crop maxCharacters="{field.config.crop.maxCharacters}"><f:format.html>{field.value}</f:format.html></f:format.crop>
     </f:then>
-    <f:else>{field.value}</f:else>
+    <f:else><f:format.html>{field.value}</f:format.html></f:else>
 </f:if>
 </html>
