--- a/Resources/Private/Partials/Types/Link.html
+++ b/Resources/Private/Partials/Types/Link.html
@@ -1,3 +1,10 @@
-<html xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers" data-namespace-typo3-fluid="true">
-TODO
+<html xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers" xmlns:tcafe="http://typo3.org/ns/Vd/Tcafe/ViewHelpers" data-namespace-typo3-fluid="true">
+<f:if condition="{tcafe:strPos(haystack: field.value, needle: 't3://file')}">
+    <f:then>
+        <f:link.typolink parameter="{field.value}"><tcafe:typolinkFileTitle value="{field.value}"/></f:link.typolink>
+    </f:then>
+    <f:else>
+        <f:link.typolink parameter="{field.value}" />
+    </f:else>
+</f:if>
 </html>
