--- a/Resources/Private/Partials/Types/File/Audio.html
+++ b/Resources/Private/Partials/Types/File/Audio.html
@@ -1,8 +1,8 @@
 <html xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers" data-namespace-typo3-fluid="true">
-<figure class="video">
+<figure class="audio">
     <f:media file="{file}" width="{f:if(condition: field.config.mediaWidth, then: field.config.mediaWidth, else: settings.list.defaultMediaWidth)}" height="{f:if(condition: field.config.mediaHeight, then: field.config.mediaHeight, else: settings.list.defaultMediaHeight)}" alt="{file.alternative}" title="{file.title}" />
 	<f:if condition="{file.description}">
-		<figcaption class="video-caption">
+		<figcaption class="audio-caption">
 			{file.description}
 		</figcaption>
 	</f:if>
