[TASK] Display label of foreign fields

--- a/Resources/Private/Partials/Types/Relation.html
+++ b/Resources/Private/Partials/Types/Relation.html
@@ -1,11 +1,18 @@
 <html xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers" xmlns:tcafe="http://typo3.org/ns/Vd/Tcafe/ViewHelpers" data-namespace-typo3-fluid="true">
 <tcafe:relation uidLocal="{row.uid.value}" table="{configuration.table}" foreignFieldName="{field.name}" foreignFieldValue="{field.value}" foreignTableSelectFields="{field.config.fields}">
     <f:for each="{records}" as="record">
-        <f:for each="{record}" as="field">
-            <f:if condition="{field.config.hidden} == 0">
-                <f:render partial="Types/{field.config.type}" arguments="{field: field, configuration: configuration, row: record, settings: settings}"/>
-            </f:if>
-        </f:for><br>
+        <dl class="border-bottom">
+            <f:for each="{record}" as="field">
+                <f:if condition="{field.config.hidden} == 0">
+                    <dt>
+                        {field.config.label}
+                    </dt>
+                    <dd>
+                        <f:render partial="Types/{field.config.type}" arguments="{field: field, configuration: configuration, row: record, settings: settings}"/>
+                    </dd>
+                </f:if>
+            </f:for>
+        </dl>
     </f:for>
 </tcafe:relation>
 </html>
