--- a/Resources/Private/Partials/Pagination/Pagination.html
+++ b/Resources/Private/Partials/Pagination/Pagination.html
@@ -3,24 +3,25 @@
 <f:if condition="{f:count(subject: pagination.pages)} > 1">
     <nav>
         <ul class="pagination justify-content-center">
-            <li class="page-item{f:if(condition: '{currentPage} == 0', then: ' disabled')}">
-                <f:link.action class="page-link" action="filter" arguments="{currentPage: '{currentPage - 1}', filterValues: filterValues}">&laquo;</f:link.action>
-            </li>
-            <f:if condition="{pagination.displayRangeStart} > 1">
-                <li><f:link.action class="page-link" action="{action}" arguments="{currentPage: 0}">1</f:link.action></li>
+            <f:if condition="{pagination.previousPage}">
+                <li class="page-item{f:if(condition: '{currentPage} == 0', then: ' disabled')}">
+                    <f:link.action class="page-link" action="{action}" arguments="{currentPage: '{currentPage - 1}', filterValues: filterValues}">&laquo;</f:link.action>
+                </li>
             </f:if>
+            <li><f:link.action class="page-link" action="{action}" arguments="{currentPage: 0}">1</f:link.action></li>
             <f:if condition="{pagination.hasLessPages}">
                 <li>…</li>
             </f:if>
             <f:for each="{pagination.pages}" as="page">
-               <f:if condition="{page.active}">
+                <f:variable name="pageNum">{page.index+1}</f:variable>
+               <f:if condition="{page.active} && {pageNum} > 1">
                	    <f:then>
                         <li class="page-item active">
                             <f:link.action class="page-link" action="{action}" arguments="{currentPage: page.index, filterValues: filterValues}">{page.label} <span class="sr-only">(current)</span></f:link.action>
                         </li>
                     </f:then>
                	    <f:else>
-                        <f:if condition="{page.index} > {pagination.displayRangeStart} && {page.index} < {pagination.displayRangeEnd}">
+                        <f:if condition="{pageNum} > {pagination.displayRangeStart} && {page.index} > 0 && {pageNum} < {pagination.displayRangeEnd}">
                             <li class="page-item">
                                 <f:link.action class="page-link" action="{action}" arguments="{currentPage: page.index, filterValues: filterValues}">{page.label}</f:link.action>
                             </li>
@@ -36,9 +37,11 @@
                     <f:link.action class="page-link" action="{action}" arguments="{currentPage: pagination.lastPage}">{pagination.numberOfPages}</f:link.action>
                 </li>
             </f:if>
-            <li class="page-item{f:if(condition: '{currentPage + 1} == {pagination.numberOfPages}', then: ' disabled')}">
-                <f:link.action class="page-link" action="filter" arguments="{currentPage: '{currentPage + 1}', filterValues: filterValues}">&raquo;</f:link.action>
-            </li>
+            <f:if condition="{pagination.nextPage}">
+                <li class="page-item{f:if(condition: '{currentPage + 1} == {pagination.numberOfPages}', then: ' disabled')}">
+                    <f:link.action class="page-link" action="{action}" arguments="{currentPage: '{currentPage + 1}', filterValues: filterValues}">&raquo;</f:link.action>
+                </li>
+            </f:if>
         </ul>
     </nav>
 </f:if>
