--- a/Resources/Private/Partials/Pagination/Pagination.html
+++ b/Resources/Private/Partials/Pagination/Pagination.html
@@ -8,7 +8,7 @@
                     <f:link.action class="page-link" action="{action}" arguments="{currentPage: '{currentPage - 1}', filterValues: filterValues}">&laquo;</f:link.action>
                 </li>
             </f:if>
-            <li class="page-item{f:if(condition: '{currentPage} == 0', then: ' active')}"><f:link.action class="page-link" action="{action}" arguments="{currentPage: 0}">1</f:link.action></li>
+            <li class="page-item{f:if(condition: '{currentPage} == 0', then: ' active')}"><f:link.action class="page-link" action="{action}" arguments="{currentPage: 0, filterValues: filterValues}">1</f:link.action></li>
             <f:if condition="{pagination.hasLessPages}">
                 <li>…</li>
             </f:if>
@@ -34,7 +34,7 @@
             </f:if>
             <f:if condition="{pagination.displayRangeEnd} < {pagination.numberOfPages}">
                 <li class="last">
-                    <f:link.action class="page-link" action="{action}" arguments="{currentPage: pagination.lastPage}">{pagination.numberOfPages}</f:link.action>
+                    <f:link.action class="page-link" action="{action}" arguments="{currentPage: pagination.lastPage, filterValues: filterValues}">{pagination.numberOfPages}</f:link.action>
                 </li>
             </f:if>
             <f:if condition="{pagination.nextPage} < {pagination.numberOfPages}">
